@@ -1,4 +1,5 @@
 ======================
+    ADDED: compare directories (mark menu)
     ADDED: shift+left/right changes tabs (thanks to Dmitry Suzdalev)
     ADDED: linking mimes and protocols
     ADDED: new delete dialog box: lists the file names to be deleted (thanks to dirk for the idea)
